--- a/textes-auteurs-ittrois.html
+++ b/textes-auteurs-ittrois.html
@@ -1144,180 +1144,187 @@
       </section>
       <section>
         <div class="container">
-          <div class="texteAuteur-single noPMargin">
-            <h2><em lang="wln-BE">Èl scoû d' èm grand-mère</em></h2>
-            <p>
-              <em lang="wln-BE"
-                >Vos d'in souvnez co du scoû d' vo grand-mère ?</em
-              >
-            </p>
-            <p>
-              <em lang="wln-BE"
-                >I sièrvout d'aboûrd à n'ni yoûrdi 'l cote padzou, mins in pus
-                d'ça</em
-              >
-              :
-            </p>
-            <ul>
-              <li>
+          <div class="texteAuteur">
+            <div class="texteAuteur-left">
+              <h2><em lang="wln-BE">Èl scoû d' vo grand-mère</em></h2>
+              <p>
                 <em lang="wln-BE"
-                  >i sièrvoût d'moufe pou rsaki ène tchaude payèle d'in n-èstûve
-                  ronfèlant</em
+                  >Vos d'in souvnez co du scoû d' vo grand-mère ?</em
                 >
-              </li>
-              <li>
+              </p>
+              <p>
                 <em lang="wln-BE"
-                  >i sièrvoût à stièrde les larmes des èfants yè à rnètiyi les
-                  mouzons tout man</em
-                >.<em lang="wln-BE">nèts</em>
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >dèspu 'l pouli, i sièrvoût à bèzaci les yeus, ranimer les
-                  pouyons, yè tîkfwè les yeus bîlés finichine dins 'l keuwèt su
-                  l'èstûve</em
-                >.
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >quand on rcèvoût d'èl vizite, i sièrvoût à muchi les èfants
-                  timid'</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >quand i fzoût frwèd, èle infardèloût ses bras d'dins</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >ès' bon vî scoû sièrvoût d'souflèt, skeû au d'zeur d'
-                  l'afeuwur'</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >c'est li qui bèzaçoût les patakes yè les skètons d' bos squ'à
-                  'l cujène</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >dèspu 'l djârdin, i sièrvoût d' mande pou branmin des
-                  légumes</em
+                  >I sièrvout d'aboûrd à n'ni yoûrdi 'l cote padzou, mins in pus
+                  d'ça</em
                 >
                 :
-                <em lang="wln-BE"
-                  >les ptits pwès, les cabus, les sprôtjes, les porias, les
-                  fèves yè minme les guèrzèles</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >fin sètimbe, i sièrvoût à ramasser les puns tcheuts : les pus
-                  bias, les cis d'coupète ni pokis, èle les mètoût au d'zeûr pou
-                  nos autes</em
-                >.
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >quand des viziteus arivine, su pîd d'fourtche, faloût vir
-                  comint qu'ça daloût râde avu l'èscoû pou fé les poussières, yè
-                  cûre él gatau in dijant</em
-                >
-                : «
-                <em lang="wln-BE"
-                  >dji va les strôner avu ça, is sront apowés ».</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >au moumint d'mindji, Grand –Mère daloût su l'apas d' l'uch yè
-                  skeuwoût ès' n-èscoû : t'aussi râde, les omes à tchamp savine
-                  qui faloût daler 's mète à tâbe.</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >Grand-Mère 's d'in sièrvoût pou soûrti les târtes à prones du
-                  four' yè les mètes à rafrwèdi sul pière d'èl férniesse</em
-                >
-              </li>
-              <li>
-                <em lang="wln-BE"
-                  >i faura co ratinde lonmint d'vant qu'ène saki indvinte ène
-                  sakè qui sièrviroût à tant d'z-afêres (minme èrcèvwêr les
-                  cindes d'ène sigarète qu'èle fumoût in muchète)</em
-                >
-              </li>
-            </ul>
-            <p>Te souviens-tu du tablier de ta grand-mère ?</p>
-            <p>
-              Il servait d'abord à ne pas salir la robe dessous, mais en plus de
-              ça :
-            </p>
-            <ul>
-              <li>
-                il servait de moufle pour enlever une poêle chaude d'un fourneau
-                ronflant
-              </li>
-              <li>
-                il servait à essuyer les larmes des enfants et à nettoyer les
-                frimousses salies
-              </li>
-              <li>
-                au poulailler, il servait à transporter les œufs, ranimer les
-                poussins, et parfois les œufs fêlés finissaient dans le poêlon
-                sur le fourneau
-              </li>
-              <li>
-                quand il y avait de la visite, il servait à cacher les petits
-                timides
-              </li>
-              <li>quand il faisait froid, elle s'y emmitouflait les bras</li>
-              <li>
-                son bon vieux tablier agité au dessus de la flambée servait de
-                soufflet
-              </li>
-              <li>
-                c'est lui qui transportait les patates et les bûches jusqu'à la
-                cuisine
-              </li>
-              <li>
-                au jardin, il servait de panier pour beaucoup de légumes : les
-                petits pois, les choux, les choux de Bruxelles, les poireaux,
-                les haricots, et même les groseilles
-              </li>
-              <li>
-                fin septembre, il servait à ramasser les pommes tombées ; les
-                plus belles, celles de cime pas talées, elle les mettait au
-                dessus, pour nous
-              </li>
-              <li>
-                quand des visiteurs arrivaient à l'improviste, fallait voir à
-                quelle vitesse elle faisait les poussières et cuisait le gâteau
-                en disant : « je vais les étrangler avec ça, ils seront gavés »
-              </li>
-              <li>
-                à l'heure du repas, Grand-Mère allait sur le perron agiter son
-                tablier ; aussitôt, les hommes au champ savaient qu'ils devaient
-                passer à table
-              </li>
-              <li>
-                Grand-Mère s'en servait pour sortir les tartes aux prunes du
-                four et les mettre à refroidir sur le seuil de la fenêtre
-              </li>
-              <li>
-                il faudra attendre longtemps avant que quelqu'un invente un
-                objet qui puisse servir à tant d'usages (même recueillir les
-                cendres d'une cigarette fumée en cachette.
-              </li>
-            </ul>
-            <p>
-              Le texte en français, d'auteur non identifiable, paru sur
-              Internet, a été adapté en walon d'Yite par Jean-Marie Gervy en
-              février 2009.
-            </p>
+              </p>
+              <ul>
+                <li>
+                  <em lang="wln-BE"
+                    >i sièrvoût d'moufe pou rsaki ène tchaude payèle d'in
+                    n-èstûve ronfèlant</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >i sièrvoût à stièrde les larmes des èfants yè à rnètiyi les
+                    mouzons tout man</em
+                  >.<em lang="wln-BE">nèts</em>
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >dèspu 'l pouli, i sièrvoût à bèzaci les yeus, ranimer les
+                    pouyons, yè tîkfwè les yeus bîlés finichine dins 'l keuwèt
+                    su l'èstûve</em
+                  >.
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >quand on rcèvoût d'èl vizite, i sièrvoût à muchi les èfants
+                    timid'</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >quand i fzoût frwèd, èle infardèloût ses bras d'dins</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >ès' bon vî scoû sièrvoût d'souflèt, skeû au d'zeur d'
+                    l'afeuwur'</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >c'est li qui bèzaçoût les patakes yè les skètons d' bos
+                    squ'à 'l cujène</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >dèspu 'l djârdin, i sièrvoût d' mande pou branmin des
+                    légumes</em
+                  >
+                  :
+                  <em lang="wln-BE"
+                    >les ptits pwès, les cabus, les sprôtjes, les porias, les
+                    fèves yè minme les guèrzèles</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >fin sètimbe, i sièrvoût à ramasser les puns tcheuts : les
+                    pus bias, les cis d'coupète ni pokis, èle les mètoût au
+                    d'zeûr pou nos autes</em
+                  >.
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >quand des viziteus arivine, su pîd d'fourtche, faloût vir
+                    comint qu'ça daloût râde avu l'èscoû pou fé les poussières,
+                    yè cûre él gatau in dijant</em
+                  >
+                  : «
+                  <em lang="wln-BE"
+                    >dji va les strôner avu ça, is sront apowés ».</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >au moumint d'mindji, Grand –Mère daloût su l'apas d' l'uch
+                    yè skeuwoût ès' n-èscoû : t'aussi râde, les omes à tchamp
+                    savine qui faloût daler 's mète à tâbe.</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >Grand-Mère 's d'in sièrvoût pou soûrti les târtes à prones
+                    du four' yè les mètes à rafrwèdi sul pière d'èl
+                    férniesse</em
+                  >
+                </li>
+                <li>
+                  <em lang="wln-BE"
+                    >i faura co ratinde lonmint d'vant qu'ène saki indvinte ène
+                    sakè qui sièrviroût à tant d'z-afêres (minme èrcèvwêr les
+                    cindes d'ène sigarète qu'èle fumoût in muchète)</em
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="texteAuteur-right">
+              <h2><em lang="wln-BE">Le tablier de ta grand-mère</em></h2>
+              <p>Te souviens-tu du tablier de ta grand-mère ?</p>
+              <p>
+                Il servait d'abord à ne pas salir la robe dessous, mais en plus
+                de ça :
+              </p>
+              <ul>
+                <li>
+                  il servait de moufle pour enlever une poêle chaude d'un
+                  fourneau ronflant
+                </li>
+                <li>
+                  il servait à essuyer les larmes des enfants et à nettoyer les
+                  frimousses salies
+                </li>
+                <li>
+                  au poulailler, il servait à transporter les œufs, ranimer les
+                  poussins, et parfois les œufs fêlés finissaient dans le poêlon
+                  sur le fourneau
+                </li>
+                <li>
+                  quand il y avait de la visite, il servait à cacher les petits
+                  timides
+                </li>
+                <li>quand il faisait froid, elle s'y emmitouflait les bras</li>
+                <li>
+                  son bon vieux tablier agité au dessus de la flambée servait de
+                  soufflet
+                </li>
+                <li>
+                  c'est lui qui transportait les patates et les bûches jusqu'à
+                  la cuisine
+                </li>
+                <li>
+                  au jardin, il servait de panier pour beaucoup de légumes : les
+                  petits pois, les choux, les choux de Bruxelles, les poireaux,
+                  les haricots, et même les groseilles
+                </li>
+                <li>
+                  fin septembre, il servait à ramasser les pommes tombées ; les
+                  plus belles, celles de cime pas talées, elle les mettait au
+                  dessus, pour nous
+                </li>
+                <li>
+                  quand des visiteurs arrivaient à l'improviste, fallait voir à
+                  quelle vitesse elle faisait les poussières et cuisait le
+                  gâteau en disant : « je vais les étrangler avec ça, ils seront
+                  gavés »
+                </li>
+                <li>
+                  à l'heure du repas, Grand-Mère allait sur le perron agiter son
+                  tablier ; aussitôt, les hommes au champ savaient qu'ils
+                  devaient passer à table
+                </li>
+                <li>
+                  Grand-Mère s'en servait pour sortir les tartes aux prunes du
+                  four et les mettre à refroidir sur le seuil de la fenêtre
+                </li>
+                <li>
+                  il faudra attendre longtemps avant que quelqu'un invente un
+                  objet qui puisse servir à tant d'usages (même recueillir les
+                  cendres d'une cigarette fumée en cachette.
+                </li>
+              </ul>
+              <p>
+                Le texte en français, d'auteur non identifiable, paru sur
+                Internet, a été adapté en walon d'Yite par Jean-Marie Gervy en
+                février 2009.
+              </p>
+            </div>
           </div>
         </div>
       </section>
