--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <figcaption
                 style="font-style: italic; opacity: 0.7; text-align: center"
               >
-                Jean-Marie Gervy - 2019
+                Auteur, Jean-Marie Gervy
               </figcaption>
             </figure>
           </p>
