--- a/Z.html
+++ b/Z.html
@@ -8,6 +8,11 @@
       Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
       - Lettre Z
     </title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="favicon-wf.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="dico">
