--- a/dictionnaire-ancienne-langue-française.html
+++ b/dictionnaire-ancienne-langue-française.html
@@ -7,6 +7,11 @@
       Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
       - Dictionnaire de l'ancienne langue française
     </title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="favicon-wf.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
