--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h1>Sommaire</h1>
           <nav class="home-nav">
             <div>
-              <a href="./préface.html">Préface</a>
+              <a href="./preface.html">Préface</a>
             </div>
             <div>
               <a href="./comment-lire-le-wallon.html"
@@ -88,7 +88,7 @@
               >
             </div>
             <div>
-              <a href="./abréviations.html">Abréviations</a>
+              <a href="./abreviations.html">Abréviations</a>
             </div>
             <div>
               <a href="./A.html">Dictionnaire</a>
