fix urls and add script to add BASE tag at deploy

--- a/index.html
+++ b/index.html
@@ -80,57 +80,57 @@
           <h1>Sommaire</h1>
           <nav class="home-nav">
             <div>
-              <a href="./preface.html">Préface</a>
+              <a href="preface.html">Préface</a>
             </div>
             <div>
-              <a href="./comment-lire-le-wallon.html"
+              <a href="comment-lire-le-wallon.html"
                 >Mais comment lire le wallon ?</a
               >
             </div>
             <div>
-              <a href="./abreviations.html">Abréviations</a>
+              <a href="abreviations.html">Abréviations</a>
             </div>
             <div>
-              <a href="./A.html">Dictionnaire</a>
+              <a href="A.html">Dictionnaire</a>
             </div>
             <div>
-              <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
+              <a href="grammaire.html">Grammaire wallonne pour Ittre</a>
             </div>
             <div>
-              <a href="./conjugaisons.html">Conjugaison</a>
+              <a href="conjugaisons.html">Conjugaison</a>
             </div>
             <div>
-              <a href="./liste-des-bourgmestres.html"
+              <a href="liste-des-bourgmestres.html"
                 >Liste des bourgmestres de nos 3 villages connus depuis la fin
                 du 19<sup>ème</sup> siècle</a
               >
             </div>
             <div>
-              <a href="./liste-des-gardes-champetres.html"
+              <a href="liste-des-gardes-champetres.html"
                 >Liste des derniers gardes-champêtres de nos 3 villages</a
               >
             </div>
             <div>
-              <a href="./liste-des-lieux-dits.html"
+              <a href="liste-des-lieux-dits.html"
                 >Liste et localisation des lieux-dits pour Ittre, Haut-Ittre et
                 Virginal repris sur la carte Popp de ± 1865</a
               >
             </div>
             <div>
-              <a href="./textes-auteurs-ittrois.html"
+              <a href="textes-auteurs-ittrois.html"
                 >Textes en wallon rédigés par nos auteurs locaux</a
               >
             </div>
             <div>
-              <a href="./dictionnaire-ancienne-langue-française.html"
+              <a href="dictionnaire-ancienne-langue-française.html"
                 >Dictionnaire de l'ancienne langue française</a
               >
             </div>
             <div>
-              <a href="./remerciements.html">Remerciements</a>
+              <a href="remerciements.html">Remerciements</a>
             </div>
             <div>
-              <a href="./bibliographie.html">Bibliographie</a>
+              <a href="bibliographie.html">Bibliographie</a>
             </div>
           </nav>
         </div>
