--- a/dictionnaire-ancienne-langue-française.html
+++ b/dictionnaire-ancienne-langue-française.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Dictionnaire de l'ancienne langue française
+      Dictionnaire Français-Wallon pour Ittre et environs - Dictionnaire de
+      l'ancienne langue française
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -13,6 +13,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Dictionnaire de l'ancienne langue française (tome 6) avec des mots en wallon."
+    />
   </head>
   <body>
     <header>
