--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-    </title>
+    <title>Dictionnaire Français-Wallon pour Ittre et environs</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs - Ce dictionnaire reprend les mots et expressions wallonnes encore connus à Ittre, Haut-Ittre et Virginal, terres de wallo-picard."
+    />
   </head>
   <body class="home">
     <header>
