--- a/remerciements.html
+++ b/remerciements.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Remerciements
+      Dictionnaire Français-Wallon pour Ittre et environs - Remerciements
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -13,6 +12,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Remerciements pour le Dictionnaire Français-Wallon pour Ittre et environs."
+    />
   </head>
   <body>
     <header>
