--- a/textes-auteurs-ittrois.html
+++ b/textes-auteurs-ittrois.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Textes d'auteurs ittrois
+      Dictionnaire Français-Wallon pour Ittre et environs - Textes d'auteurs
+      ittrois
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -13,6 +13,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Textes d'auteurs ittrois en wallon et en français."
+    />
   </head>
   <body>
     <header>
