--- a/conjugaisons.html
+++ b/conjugaisons.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Conjugaisons
+      Dictionnaire Français-Wallon pour Ittre et environs - Conjugaisons
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -14,6 +13,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Conjugaisons des verbes wallons selon les différents groupes et modèles de conjugaison."
+    />
   </head>
   <body>
     <header>
