--- a/grammaire.html
+++ b/grammaire.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Grammaire wallonne pour Ittre
+      Dictionnaire Français-Wallon pour Ittre et environs - Grammaire wallonne
+      pour Ittre
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -14,6 +14,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Grammaire wallonne pour Ittre, adaptation de la Grammaire Aclote de Joseph Coppens."
+    />
   </head>
   <body>
     <header>
