--- a/liste-des-lieux-dits.html
+++ b/liste-des-lieux-dits.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Liste des lieux-dits
+      Dictionnaire Français-Wallon pour Ittre et environs - Liste des lieux-dits
     </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
@@ -14,6 +13,10 @@
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Liste des lieux-dits d'Ittre selon la carte Popp vers 1860."
+    />
   </head>
   <body>
     <header>
