--- a/preface.html
+++ b/preface.html
@@ -4,16 +4,17 @@
 <base href="https://gervye.github.io/dico_francais_wallon_ittre/">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Préface
-    </title>
+    <title>Dictionnaire Français-Wallon pour Ittre et environs - Préface</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
+    <meta
+      name="description"
+      content="Préface du Dictionnaire Français-Wallon pour Ittre et environs."
+    />
   </head>
   <body>
     <header>
